Use lombok